manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: cloud-sample
spec:
    ports:
    - port: 8080 
    selector:
        app: cloud-sample
